--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,8 @@ addons:
       - cmake
       - build-essential
       - ninja-build
-      - python-dev
-      - libffi-dev
-      - libssl-dev
 install:
-  - pip install yotta
+  - pip install -U yotta
 script:
   - yt build
 notifications:
